# datetimelib

./: .gitignore  CMakeLists.txt  README.md  mk
ai-prompts/: cmake-file.txt
cmake/: datetimelibConfig.cmake.in
include/datetimelib/: datetimelib.hpp  perftimer.hpp  types.hpp
include/test/: testlib.hpp
scripts/: merge_to_header_only.py
single/: README.md  datetimelib.hpp
src/: datetimelib.cpp  unit.cpp
